apps/base/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
