apps/base/immich/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
    gateway.excloo.dev/private-access: "true"
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-server
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 2283
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-database
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: immich
              app.kubernetes.io/name: server
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      cnpg.io/cluster: immich-database
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: immich
              app.kubernetes.io/name: server
      ports:
        - port: 3003
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: machine-learning
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-valkey
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: immich
              app.kubernetes.io/name: server
      ports:
        - port: 6379
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: valkey
  policyTypes:
    - Ingress
